--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
             </div>
 
             <div>
-                <img class="card-img" src="images/Pic_2.jpg" alt="Picture 2">
+                <img class="card-img" src="images/Pic_2.jpg" alt="Card Picture 2">
                 <h3 class="card-h3">Mobile Applications</h3>
                 <p class="card-p">Our tech experts are able <br> to create dynamic mobile <br>
                     applications that will stick <br> out from the crowd. Contact <br> us for more information.</p>
             </div>
 
             <div>
-                <img class="card-img" src="images/Pic_3.jpg" alt="Picture 3">
+                <img class="card-img" src="images/Pic_3.jpg" alt="Card Picture 3">
                 <h3 class="card-h3">Tech Marketing</h3>
                 <p class="card-p">We can take your product and <br> boost its presence online.
                     <br> From ranking it high on Google <br> through careful SEO, we can <br> expand your online
